02.03/topic.md
the internet is an inernational computer network made up of thousands of networks linked together. all these computers communicate with each other and to do this they need to use the same language or protocol: TCP(transmission control protocol) or IP (internet protocol)

There're different ways to get access to the Internet: DSL dial-up connection cable Internet and wireless Internet. Let's get acquinted with them a little bit closer


DSL is a Digital Subscriber Line. It's a high-speed Internet connection which utilizes a standart telephone line but allows digital signals to be carried instead of analogue. Also it allows the full brandwidth of a copper twisted-pair telephine cabling to be utilized.
The most commonly installed DSL technology for Internet access is ADSL (Asymetric Digital Subscriber Line). Asymetric means that the download speed is faster than the upload speed. This technology is a low-cost option compared with technologies with the same branwidth


a dial-up connection to the Internet is set up by dialing a telephone number hence the name. the main difference between DSL and dial-up is that using dial-up connection only one service can be provided at a time and it's impossible to use the phone to make calls and browse the Internet at the same time

cable internet is a form of Internet access that uses the infrastructure of cable TV networks to provide Internet services. It's integrated into the cable television infrastructure analogously to DSL which uses the existing telephone network.
To get access to the Internet like this your Internet Service Provider sends a data signals through the coaxial cable into your home. Then the cable modem connects to your computer and other devices via an Ethernet cable or through Wi-Fi network using a Wi-Fi router
A cable connection is highly reliable however the speed can be slower during peak usage hours when a lot of Internet users are online 

Fiber-optic Internet uses fiber-optic cables istead of copper wires. Those cables send data to anf from a computer by harnessing the power of light and can carry data over long distanecs with low attenuation and distortion of the light signal. 

the three wireless tenchologies widely used today are wifi, cellular and satellite internet

wifi uses radio waves to wirelessly connect devices. to get access to the internet a device has to be connected over wifi to a wireless router

internet over satellite allows a user to acces the net via a geostationary satellite that orbits the earth. satellite internet access can provide high-speed internet where DSL is either not available or not functioning well. To get access to the Internet one needs a satellite dish and a modem

a cellular network is a communication network distributed over land areas called cells. each cell has three cell sites. these base provide a cell with the network coverage
