03.02/topic.md
the internet is an international computer network made up of thousands of networks linked together. all these computers communicate with each other and to do this they need to use the same language or protocol: TCP(transmission control protocol) or IP (internet protocol)

There're different ways to get access to the Internet: DSL dial-up connection cable Internet and wireless Internet

DSL is a Digital Subscriber Line. It's a high-speed Internet connection which utilizes a standart telephone line but allows digital signals to be carried instead of analogue. Also it allows the full brandwidth of a copper twisted-pair telephine cabling to be utilized.
The most commonly installed DSL technology for Internet access is ADSL (Asymetric Digital Subscriber Line). Asymetric means that the download speed is faster than the upload speed

a dial-up connection to the Internet is set up by dialing a telephone number hence the name. the main difference between DSL and dial-up is that it's impossible to use the phone to make calls and browse the Internet at the same time while using dial-up connection

cable internet is a form of Internet access that uses the infrastructure of cable TV networks to provide Internet services. 
To get access to the Internet like this your Internet Service Provider sends a data signals through the coaxial cable into your home then the cable modem connects to your computer and other devices via an Ethernet cable or through Wi-Fi network using a Wi-Fi router
A cable connection is highly reliable however the speed can be slower during peak usage hours when a lot of Internet users are online 

Fiber-optic Internet uses fiber-optic cables istead of copper wires. Those cables send data to and from a computer by harnessing the power of light and can carry data over long distanecs with low attenuation and distortion of the light signal. 

there're three wireless tenchologies widely used today: wifi, cellular and satellite internet

wifi uses radio waves to wirelessly connect devices. to get access to the internet a device has to be connected over wifi to a wireless router

internet over satellite allows a user to acces the net via a geostationary satellite that orbits the earth. satellite internet access can provide high-speed internet where DSL is either not available or not functioning well. To get access to the Internet one needs a satellite dish and a modem

a cellular network is a communication network distributed over land areas called cells. each cell has three cell sites. these base provide a cell with the network coverage

The internet consists of many different systems. WWW (the world wide web) a collection of files or pages containing links to the other documents on the Net

components of the Internet:

mailing lists based on programs that send messages on a certain topic 


chat for real-time conversations


internet telephone a system that lets people make voice calls via the Internet


video conference a system that allows the transmittion of video and audio signals in real time


file transfer protocol used to transfer files between ccomputers


newsgroups where people send read and respond to public bulletin


TELNET a program that enables a computer to function as a terminal working from a remote computer as a terminal


email — for the exchange of messages and attached files. it has 3 protocols: SMTP POP and IMAP

SMTP — Simple Mail Transfer Protocol is used for sending email over the Internet. Once a message has been delivered it can't be recalled or cancelled. it's also deleted from the sending server once it's been delivered

POP — Post Office Protocol allows you to download email messages on your local computer and read them even when you are offline. when you use POP3 to connect to your email account messages are downloaded locally and removed from the email server

IMAP — Internet Mail Access Protocol is similar to POP3 but allows you to choose which messages you download 


